--- a/bryce-cloud-module/bryce-cloud-sms/pom.xml
+++ b/bryce-cloud-module/bryce-cloud-sms/pom.xml
@@ -14,11 +14,12 @@
 
     <!-- 依赖 -->
     <dependencies>
-        <!-- 通用 Cloud 依赖 -->
+        <!-- 通用服务依赖 -->
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
-            <artifactId>bryce-common-cloud</artifactId>
+            <artifactId>bryce-common-server</artifactId>
         </dependency>
+        <!-- 通用安全依赖 -->
         <dependency>
             <groupId>com.brycehan.cloud</groupId>
             <artifactId>bryce-common-security</artifactId>
