refactor(bryce-cloud):调整异常处理和响应状态码
- 为 JwtAuthenticationFilter 实现 Ordered 接口，设置过滤器顺序为 0
-

--- a/docker/mysql/conf/my.cnf
+++ b/docker/mysql/conf/my.cnf
@@ -29,6 +29,6 @@ binlog_cache_size=16M
 # 关闭MyISAM的缓冲区
 key_buffer_size=0
 # 专用服务器，配置为内存的70%以上
-#innodb_buffer_pool_size=1G
+innodb_buffer_pool_size=1G
 # InnoDB重做日志容量，配置为innodb_buffer_pool_size的25％
-#innodb_redo_log_capacity=200M
+innodb_redo_log_capacity=200M
